# code-porter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: doc.md
src/: main.py
src/code_porter/: __init__.py  archive.py  cli.py  executor.py  models.py  planner.py  scanner.py
tests/: test_archive_flow.py  test_scanner.py
