[project]
name = "code-porter"
dynamic = ["version"]
description = "Git-first workspace migration planner for remote or local code archives"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
	{ name = "deali" },
]
keywords = ["archive", "cli", "git", "migration", "workspace"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development :: Version Control :: Git",
	"Topic :: Utilities",
]
dependencies = [
	"pathspec>=0.12.1",
	"rich>=14.1.0",
	"typer>=0.19.2",
]

[project.urls]
Homepage = "https://github.com/deali/code-porter"
Repository = "https://github.com/deali/code-porter"
Issues = "https://github.com/deali/code-porter/issues"

[project.scripts]
code-porter = "code_porter.cli:main"

[dependency-groups]
dev = [
	"pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/code_porter"]

[tool.hatch.build.targets.sdist]
include = [
	"LICENSE",
	"README.md",
	"src/code_porter",
	"src/main.py",
	"tests",
	"pyproject.toml",
]
